@@ -32,7 +32,7 @@
 30		"Submatrix extract"	"["		3			"omxMatrixExtract"
 31		"Half vectorization"	"vech"		1			"omxMatrixVech"
 32		"1/2 vector (strict)"	"vechs"		1			"omxMatrixVechs"
-33		"Matrix Diagonal To Vector"	"d2v"		1			"omxMatrixDiagonal"
-34		"Vector To Diagonal"	"v2d"		1			"omxMatrixFromDiagonal"
+33		"Diagonal To Vector"	"diag2vec"	1			"omxMatrixDiagonal"
+34		"Vector To Diagonal"	"vec2diag"	1			"omxMatrixFromDiagonal"
 35		"Multivariate Normal Integration"   "omxMnor"   3   "omxMultivariateNormalIntegration"
 36		"All Cells Multivariate Normal Integration"   "omxAllInt"   3   "omxAllIntegrationNorms"
