@@ -110,6 +110,10 @@ model <- mxModel(model, mxAlgebra(vech(D), name = 'test31a'))
 model <- mxModel(model, mxAlgebra(vech(E), name = 'test31b'))
 model <- mxModel(model, mxAlgebra(vechs(D), name = 'test32a'))
 model <- mxModel(model, mxAlgebra(vechs(E), name = 'test32b'))
+model <- mxModel(model, mxAlgebra(diag2vec(B), name = 'test33a'))
+model <- mxModel(model, mxAlgebra(diag2vec(C), name = 'test33b'))
+model <- mxModel(model, mxAlgebra(vec2diag(B[1,]), name = 'test34a'))
+model <- mxModel(model, mxAlgebra(vec2diag(t(B[1,])), name = 'test34b'))
 model <- mxRun(model)
 
 # Check passing tests
@@ -191,3 +195,7 @@ omxCheckCloseEnough(model[['test31a']]@result, mxEval(as.matrix(vech(D)), model)
 omxCheckCloseEnough(model[['test31b']]@result, mxEval(as.matrix(vech(E)), model), 0.001)
 omxCheckCloseEnough(model[['test32a']]@result, mxEval(as.matrix(vechs(D)), model), 0.001)
 omxCheckCloseEnough(model[['test32b']]@result, mxEval(as.matrix(vechs(E)), model), 0.001)
+omxCheckCloseEnough(model[['test33a']]@result, mxEval(diag2vec(B), model), 0.001)
+omxCheckCloseEnough(model[['test33b']]@result, mxEval(diag2vec(C), model), 0.001)
+omxCheckCloseEnough(model[['test34a']]@result, mxEval(vec2diag(B[1,]), model), 0.001)
+omxCheckCloseEnough(model[['test34b']]@result, mxEval(vec2diag(t(B[1,])), model), 0.001)
