@@ -6,6 +6,7 @@ trunk
 * not throwing an error on mxMatrix('Full', 3, 3, labels = c(NA, NA, NA))
 * applying identical error checking to single thresholds matrix and single thresholds algebra
 * implemented generic method names() for MxModel objects.
+* implemented vec2diag() and diag2vec() matrix algebra functions.
 
 Release 0.2.4-1038
 ==================
